Fix visibility scrollbar.

--- a/client/main.styl
+++ b/client/main.styl
@@ -25,10 +25,9 @@ html, body{
 
 /* wrapper around all */
 
-.wrapper {
-	width: 100%;
-	height: 100%;
-  overflow: auto;
+#mainWrapper {
+  width: 100%;
+  height: 100%;
 }
 
 .page {
