--- a/client/pages/places/places.styl
+++ b/client/pages/places/places.styl
@@ -1,7 +1,7 @@
 @import 'nib'
 
 #places {
-  width: 100%
+  width: 100%;
   height: 100%;
   
   iframe {
